Wed Jan 18 12:22:39 GMT 2012  Olly Betts <olly@survex.com>

	* docs/geospatial.rst: Say "haversine" rather than "Haversine"
	  consistently.

Wed Jan 18 12:01:28 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Change empty() to return bool not
	  size_t.

Wed Jan 18 10:44:16 GMT 2012  Olly Betts <olly@survex.com>

	* docs/geospatial.rst: Fix minor typos in geospatial docs.

Wed Jan 18 10:39:53 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,api/postingsource.cc,api/queryinternal.cc,
	  api/registry.cc,common/output.h,common/registryinternal.h,
	  docs/geospatial.rst,geospatial/,include/Makefile.mk,include/xapian.h,
	  include/xapian/geospatial.h,include/xapian/postingsource.h,
	  include/xapian/registry.h,tests/.gitignore,tests/Makefile.am,
	  tests/api_geospatial.cc: Merge geotomerge2 branch from github.
	  Closes ticket#481.

Tue Jan 17 22:29:10 GMT 2012  Olly Betts <olly@survex.com>

	* api/errorhandler.cc: Reorder header includes.

Mon Jan 16 22:59:02 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser.lemony: Fix
	  FLAG_AUTO_SYNONYMS not to enable auto multi-word synonyms too.
	* tests/queryparsertest.cc: Extend testcase qp_synonym1 to include a
	  regression test for this bug.

Sun Jan 15 12:41:35 GMT 2012  Olly Betts <olly@survex.com>

	* .gitignore,backends/Makefile.mk,backends/brass/,backends/chert/,
	  backends/dbcheck.cc,bin/,common/bitstream.h,
	  include/xapian/database.h: Add a (currently experimental) API for
	  checking the integrity of databases (partly addresses ticket#238).
	  This means we can remove XAPIAN_VISIBILITY_DEFAULT from a number of
	  functions which aren't in the public API (partly addresses
	  ticket#63).

Fri Jan 13 12:07:39 GMT 2012  Olly Betts <olly@survex.com>

	* tests/stemtest.cc: Include <xapian.h> rather than <xapian/stem.h> -
	  we're trying to test the public API, so including the public API
	  header is better.
